--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,10 @@
 	<h1 style="margin-left: 210px;">RUNNING CAT</h1>
 <div id="path">
 
-<div >
- <img src="cat.gif" id="cat"></div>
+	<div >
+ 		<img src="cat.gif" id="cat">
+	</div>
 
-</div>
+ </div>
 </body>
 </html>
